# necSpMV

./: .gitignore  CMakeLists.txt  README.md  run_spmv_cpu.sh
cmake/: PerfSparseModule.cmake  PerfSparseUtil.cmake
data/: converter.cpp
data/graph/: Makefile
data/graph/Oregon-1/: Makefile
data/graph/Oregon-2/: Makefile
data/graph/amazon0302/: Makefile
data/graph/amazon0505/: Makefile
data/graph/amazon0601/: Makefile
data/graph/as-735/: Makefile
data/graph/as-caida/: Makefile
data/graph/ca-AstroPh/: Makefile
data/graph/ca-CondMat/: Makefile
data/graph/ca-GrQc/: Makefile
data/graph/ca-HepPh/: Makefile
data/graph/ca-HepTh/: Makefile
data/graph/cit-HepPh/: Makefile
data/graph/cit-HepTh/: Makefile
data/graph/cit-Patents/: Makefile
data/graph/email-Enron/: Makefile
data/graph/email-EuAll/: Makefile
data/graph/p2p-Gnutella04/: Makefile
data/graph/p2p-Gnutella05/: Makefile
data/graph/p2p-Gnutella06/: Makefile
data/graph/p2p-Gnutella08/: Makefile
data/graph/p2p-Gnutella09/: Makefile
data/graph/p2p-Gnutella24/: Makefile
data/graph/p2p-Gnutella25/: Makefile
data/graph/p2p-Gnutella30/: Makefile
data/graph/p2p-Gnutella31/: Makefile
data/graph/roadNet-PA/: Makefile
data/graph/roadNet-TX/: Makefile
data/graph/soc-Epinions1/: Makefile
data/graph/soc-LiveJournal1/: Makefile
data/graph/soc-Slashdot0811/: Makefile
data/graph/soc-Slashdot0902/: Makefile
data/graph/soc-sign-Slashdot081106/: Makefile
data/graph/soc-sign-Slashdot090216/: Makefile
data/graph/soc-sign-Slashdot090221/: Makefile
data/graph/soc-sign-epinions/: Makefile
data/graph/web-NotreDame/: Makefile
data/graph/wiki-Talk/: Makefile
data/graph/wiki-Vote/: Makefile
include/: PerfSparseBLAS_func.h  PerfSparseBLAS_type.h
scripts/: alltest.sh  parse_tests.py  run_py.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: PerfSpB_Alloc.h  PerfSpB_Debug.h  PerfSpB_Error.h  PerfSpB_Global.h  PerfSpB_MACRO.h  PerfSpB_Matrix.h  PerfSpB_Scalar.h  PerfSpB_Type.h  PerfSpB_Vector.h  PerfSpB_core.h
src/core/src/: PerfSpB_Alloc.c  PerfSpB_Debug.c  PerfSpB_Error.c  PerfSpB_Global.c  PerfSpB_Global_Option_set.c  PerfSpB_Matrix.c  PerfSpB_Scalar.c  PerfSpB_Vector.c  PerfSpB_Vector.cpp  PerfSpB_Warning.c  PerfSpB_finalize.c  PerfSpB_init.c
src/core/test/: 00_PerfSpB_Error_Warrning_test.cpp  01_set_and_extr_demo.cpp  02_matrix_build_demo.cpp  PerfSpB_Warrning_Error_test.c  PerfSpB_Warrning_Error_test.h
src/cpu/: CMakeLists.txt
src/cpu/include/: spmv_cpu_common.h
src/cpu/src/: ird_calc.c  spmv_vnec_D_for_mxv.c  spmv_vnec_L_for_mxv.c  spmv_vnec_S_for_mxv.c  spmv_vnec_common.c
src/cpu/test/: test_common.cpp  test_spmv_vnec.cpp  test_spmv_vnec.hpp  test_spmv_vnec_mm.cpp
src/cuda/: CMakeLists.txt
src/cuda/include/: cuda_timer.h  macros.h
src/cuda/src/: query.cu
src/cuda/src/spmv/: spmv.cu  spmv_LBNEC.cu  spmv_acsr.cu  spmv_adaptive.cu  spmv_exp.cu  spmv_flat.cu  spmv_light.cu  spmv_line_enhance.cu  spmv_mergepath.cu  spmv_nonempty_column.cu  spmv_pcsr.cu  spmv_pcsr_warp.cu  spmv_vnec.cu
src/cuda/test/cusparse/: test_cusparse_spmv_csr.cpp
src/cuda/test/spmv/: commontest_fp32.hpp  commontest_fp64.hpp  lbnec_fp32.hpp  lbnec_fp64.hpp  test_spmv_cuda.cpp
src/hip/: CMakeLists.txt
src/hip/include/: hip_timer.h  macros.h  spmv_hip.h
src/hip/src/spmv/: spmv.cpp  spmv_LBNEC.cpp  spmv_adaptive.cpp  spmv_exp.cpp  spmv_flat.cpp  spmv_light.cpp  spmv_pcsr.cpp
src/hip/test/rocsparse/: test_rocsparse_spmv_csr.cpp
src/hip/test/spmv/: commontest_fp32.hpp  commontest_fp64.hpp  flat_fp32.hpp  lbnec_fp32.hpp  lbnec_fp64.hpp  test_spmv_hip.cpp
utilities/: CSVLogger.cpp  CSVLogger.hpp  CSVTableBuilider.hpp  TestFuncName.hpp  VectorGenerator.hpp  builder.hpp  csr_formatter.h  env.h  graph.hpp  input_generator.hpp  print_vector.hpp  read_matrix.hpp  reader.hpp  readme.md  run_gtest.cpp  run_gtest.hpp  spgemm_checker.hpp  util.cpp  util.hpp  utilities.dox  writer.hpp
